tests/e2e/semantics/obj_implicit_int_float2_error.error
Error: syntax error in story at line 3, column 1

3|    map_int = map_float
      ^^^^^^^^^

E0100: Can't assign `Map[int,float]` to `Map[int,int]`
