tests/e2e/semantics/obj_implicit_int_float2_error.story
map_int = {0: 0}
map_float = {0: 0.5}
map_int = map_float
